--- a/media/css/admin.css
+++ b/media/css/admin.css
@@ -202,7 +202,8 @@ ul.vimeography-theme-list a.theme-info span {
 }
 
 #vimeography-gallery-main-menu-container,
-#vimeography-gallery-themes-container
+#vimeography-gallery-themes-container,
+#vimeography-gallery-theme-settings-container
 {
 	width: 280px;
 	float: left;
@@ -211,7 +212,8 @@ ul.vimeography-theme-list a.theme-info span {
 }
 
 #vimeography-gallery-main-menu,
-#vimeography-themes-container {
+#vimeography-themes-container,
+#vimeography-theme-settings-container {
 	position: absolute;
 	bottom: 0;
 	top: 65px;
@@ -227,7 +229,12 @@ ul.vimeography-theme-list a.theme-info span {
 	box-shadow: 0px 0px 2px rgba(0,0,0,0.10);
 }
 
-.vimeography-gallery-menu-heading:hover {
+.vimeography-gallery-menu-group:nth-child(odd) .theme-container {
+  background: #f0f0f0;
+}
+
+.vimeography-gallery-menu-heading:hover, 
+.vimeography-gallery-menu-group:nth-child(odd) .theme-container:hover {
 	background: #f9f9f9;
 }
 
@@ -247,17 +254,42 @@ ul.vimeography-theme-list a.theme-info span {
 	color: #232323;
 } 
 
-.vimeography-gallery-menu-heading.active {
-	background-color: #383838;
+.vimeography-gallery-menu-heading.active,
+.vimeography-gallery-menu-heading.selected  {
+	background-color: #383838 !important;
    -moz-box-shadow:    inset 0 0 5px #000000;
    -webkit-box-shadow: inset 0 0 5px #000000;
    box-shadow:         inset 0 0 5px #000000;
    border: none;
 }
 
-.vimeography-gallery-menu-heading.active a {
+.vimeography-gallery-menu-heading.active a,
+.vimeography-gallery-menu-heading.selected a {
 	color: #f4f4f4;
 	text-shadow: none;
+}
+
+.vimeography-gallery-menu-heading.theme-container img {
+  float: left;
+}
+
+.vimeography-gallery-menu-heading .theme-name {
+  vertical-align: top;
+  margin-left: 7px;
+}
+
+.vimeography-gallery-menu-heading .theme-version {
+  font-size: 10px;
+  margin-left: 7px;
+}
+
+.vimeography-gallery-menu-heading .icon-ok,
+.vimeography-gallery-menu-heading .icon-pencil {
+  margin: -7px 0 0 0;
+}
+
+.vimeography-gallery-menu-heading .icon-ok {
+  display: none;
 }
 
 .vimeography-gallery-menu-content {
@@ -293,14 +325,15 @@ ul.vimeography-theme-list a.theme-info span {
 /* vertical scrollbar */
 .mCSB_container{
 	width:auto;
-	margin-right:30px;
+	margin-right:20px;
 	overflow:hidden;
+	box-shadow: 2px 1px 1px rgba(0, 0, 0, .1);
 }
 .mCSB_container.mCS_no_scrollbar{
 	margin-right:0;
 }
 .mCustomScrollBox .mCSB_scrollTools{
-	width:16px;
+	width:18px;
 	height:100%;
 	top:0;
 	right:0;
